--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "vue-clickaway": "2.2.2",
     "vue-notifyjs": "0.3.0",
     "vue-router": "3.0.1",
-    "vue-select": "^3.20.2"
+    "vue-select": "^3.20.2",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^5.0.8",
